checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000176782.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#24: 
/tmp/linux-2.4.31/include/linux/fs.h:1562: error: previous declaration of 'root_device_name' was here

ERROR:CODE_INDENT: code indent should use tabs where possible
#84: FILE: arch/ppc/kernel/time.c:190:
+^I^I  ^Iif (ppc_md.set_rtc_time(xtime.tv_sec+1 + ppc_time_offset) == 0)$

Code indent should use tabs instead of spaces.
Outside of comments, documentation and Kconfig,
spaces are never used for indentation.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#indentation

WARNING:SPACE_BEFORE_TAB: please, no space before tabs
#84: FILE: arch/ppc/kernel/time.c:190:
+^I^I  ^Iif (ppc_md.set_rtc_time(xtime.tv_sec+1 + ppc_time_offset) == 0)$

CHECK:SPACING: spaces preferred around that '+' (ctx:VxV)
#84: FILE: arch/ppc/kernel/time.c:190:
+		  	if (ppc_md.set_rtc_time(xtime.tv_sec+1 + ppc_time_offset) == 0)
 		  	                                    ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:CODE_INDENT: code indent should use tabs where possible
#93: FILE: arch/ppc/kernel/time.c:300:
+                ppc_time_offset = ppc_md.time_init();$

WARNING:LEADING_SPACE: please, no spaces at the start of a line
#93: FILE: arch/ppc/kernel/time.c:300:
+                ppc_time_offset = ppc_md.time_init();$

ERROR:CODE_INDENT: code indent should use tabs where possible
#102: FILE: arch/ppc/kernel/time.c:347:
+        if (ppc_time_offset) {$

WARNING:LEADING_SPACE: please, no spaces at the start of a line
#102: FILE: arch/ppc/kernel/time.c:347:
+        if (ppc_time_offset) {$

ERROR:CODE_INDENT: code indent should use tabs where possible
#105: FILE: arch/ppc/kernel/time.c:349:
+        ^Itz.tz_minuteswest = -ppc_time_offset / 60;$

WARNING:SPACE_BEFORE_TAB: please, no space before tabs
#105: FILE: arch/ppc/kernel/time.c:349:
+        ^Itz.tz_minuteswest = -ppc_time_offset / 60;$

WARNING:LEADING_SPACE: please, no spaces at the start of a line
#105: FILE: arch/ppc/kernel/time.c:349:
+        ^Itz.tz_minuteswest = -ppc_time_offset / 60;$

WARNING:CONST_STRUCT: struct inode_operations should normally be const
#133: FILE: drivers/usb/inode.c:44:
+static struct inode_operations usbdevfs_bus_inode_operations;

Using const is generally a good idea.  Checkpatch reads
a list of frequently used structs that are always or
almost always constant.

The existing structs list can be viewed from
`scripts/const_structs.checkpatch`.

See: https://lore.kernel.org/lkml/alpine.DEB.2.10.1608281509480.3321@hadrien/

WARNING:CONST_STRUCT: struct file_operations should normally be const
#134: FILE: drivers/usb/inode.c:45:
+static struct file_operations usbdevfs_bus_file_operations;

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000176782.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 4 errors, 8 warnings, 1 checks, 96 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

NOTE: Whitespace errors detected.
      You may wish to use scripts/cleanpatch or scripts/cleanfile

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000176782.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
